<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhosHungry</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_create_lobby">Create Lobby</string>
    <string name="action_log_out">Log Out</string>

    <string name="title_activity_create_lobby">CreateLobby</string>
    <string name="title_activity_lobby_summary">LobbySummary</string>
    <string name="title_activity_splash">who\'s hungry?</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_login">Login</string>

    <string name="facebook_app_id">"786164954778080"</string>

    <string name="login_intro">Login with Facebook to start eating today!</string>

    <string name="login">Log In</string>

    <string name="logout">Log Out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="exception">Exception: %1$s</string>

    <string name="action_submit_myPicks">Submit</string>

    <string name="what_kind_of_meetup">What kind of meetup?</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="drinks">Drinks</string>
    <string name="coffee">Coffee</string>

    <string name="start_new_meetup">Start new meetup</string>
    <string name="what_kind_of_cuisine">What kind of cuisine?</string>

    <string name="bar_food">Bar Food</string>
    <string name="mexican">Mexican</string>
    <string name="bbq">BBQ</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="more">More</string>

    <string name="lunch_today">Lunch Today</string>

    <string name="where_do_you_wanna_go">Where do you wanna go?</string>
    <string name="near_me">Near me</string>
    <string name="my_favorites">My favorites</string>
    <string name="choose_by_cuisine">Choose by cuisine</string>
    <string name="my_current_location">My current location</string>
    <string name="search">Search</string>

    <string name="chipotle">Chipotle Mexican Grill</string>
    <string name="reviews">177 Reviews |</string>
    <string name="distance">1.1mi |</string>
    <string name="distanectwo">2mi</string>
    <string name="dollars">$</string>
    <string name="restaurantType">Mexican, Fast Food</string>

    <color name="pressed_color">#4d90fe</color>
    <color name="default_color">#ffffff</color>

</resources>
