<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="10dp" android:paddingRight="10dp">

    <LinearLayout
        android:id="@+id/restaurantItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/chipotle"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"/>

            <TextView
                android:id="@+id/numReviews"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"/>
            <TextView
                android:id="@+id/restaurantDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"/>
            <TextView
                android:id="@+id/restaurantCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollars"/>
        </LinearLayout>

        <TextView
            android:id="@+id/restaurantType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurantType"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/chooseRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/restaurantItem"/>
    
    <TextView
        android:id="@+id/restaurantDistTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distanectwo"
        android:layout_alignParentRight="true"
        android:layout_below="@id/restaurantItem"
        android:layout_alignLeft="@id/chooseRestaurant"
        />

</RelativeLayout>