<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#eee"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/restaurantItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/chipotle"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"/>

                <TextView
                    android:id="@+id/numReviews"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"/>
                <TextView
                    android:id="@+id/restaurantDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"/>
                <TextView
                    android:id="@+id/restaurantCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollars"/>
            </LinearLayout>

            <TextView
                android:id="@+id/restaurantType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurantType"/>
        </LinearLayout>

        <!--
            This is supposed to be the gps marker symbol
        <CheckBox
            android:id="@+id/chooseRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/restaurantItem"/>
        -->

    </RelativeLayout>

</LinearLayout>